--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,3 +24,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/DerrickDorisAd")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/DerrickDorisAd")
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+bForceRebuildOnLoad=True
+
