--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,6 +93,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -132,6 +133,7 @@ K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,
 CheckForSpecificLevelInfo_2=PropertyWrapper.DefaultValueCategory.None,
 CheckForSpecificLevelInfo=PropertyWrapper.DefaultValueCategory.None,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Maps
@@ -433,10 +435,238 @@ DirectionalLight.RayTracing=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Actor=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Asset Tools=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Mix=True
+AudioSettings.Quality=True
+ChaosSolverSettings.GameInstance=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DebugCameraControllerSettings.General=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.Console=True
+LandscapeSettings.Layers=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+RecastNavMesh.Collision=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.RayTracing=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+StreamingSettings.General=True
+StreamingSettings.Deprecated Settings=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+SkeletalMeshSimplificationSettings.General=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.Audio=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+LuminRuntimeSettings.Audio=True
+LuminRuntimeSettings.MPK Packaging=True
+LuminRuntimeSettings.Runtime=True
+LuminRuntimeSettings.Magic Leap App Tile=True
+LuminRuntimeSettings.Distribution Signing=True
+LuminRuntimeSettings.Build=True
+LuminRuntimeSettings.Advanced MPK Packaging=True
+LuminRuntimeSettings.AdvancedBuild=True
+LuminRuntimeSettings.Rendering=True
+MagicLeapSDKSettings.SDKConfig=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+GooglePADRuntimeSettings.Packaging=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+MagicLeapSettings.General=True
+MagicLeapARPinSettings.ARPin=True
+MoviePipelinePIEExecutorSettings.Startup=True
+MoviePipelineInProcessExecutorSettings.Startup=True
+MovieRenderPipelineProjectSettings.Movie Render Pipeline=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Scalability=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.SimulationOptions=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+SteamVREditorSettings.SteamVR Input=True
+SteamVREditorSettings.SteamVR Editor Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Random_Level/RandomLevelGenerator.RandomLevelGenerator
+OpenAssetsAtExit=/Game/Models/Level_Maps/Boundary.Boundary
 
 [WorldBrowser]
 DisplayPaths=False
@@ -444,6 +674,7 @@ DisplayActorsCount=False
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=True
+RecastNavMesh.Runtime=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -555,7 +786,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [SlateAdditionalLayoutConfig]
 StaticMeshEditorViewport.LayoutType=OnePane
@@ -572,32 +803,34 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Maps/Base_Level
-MRUItem1=/Game/ThirdPersonBP/Maps/Level_1
-MRUItem2=/Game/ThirdPersonBP/Maps/Level_5
-MRUItem3=/Game/ThirdPersonBP/Maps/Level_3
-MRUItem4=/Game/ThirdPersonBP/Maps/Level_2
-MRUItem5=/Game/Random_Level/RandomLevelGenerator
-MRUItem6=/Game/ThirdPersonBP/Maps/Level_6
-MRUItem7=/Game/ThirdPersonBP/Maps/Level_4
-MRUItem8=/Game/Models/Level_Maps/Level_5
-MRUItem9=/Game/Random_Level/SpecificLevelInfo
-MRUItem10=/Game/Models/Level_Maps/Level_1
-MRUItem11=/Game/Models/Level_Maps/Materials/blue
-MRUItem12=/Game/Models/Level_Maps/Materials/pink
-MRUItem13=/Game/Models/Level_Maps/Level_4
-MRUItem14=/Game/Models/Level_Maps/Level_3
-MRUItem15=/Game/Models/Level_Maps/Level_2
-MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem17=/Game/Models/level_assets/chair
-MRUItem18=/Game/Models/level_assets/Dinning_Table
-MRUItem19=/Game/Models/level_assets/canteen
+MRUItem0=/Game/Models/Level_Maps/Boundary
+MRUItem1=/Game/ThirdPersonBP/Maps/Base_Level
+MRUItem2=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem3=/Game/Random_Level/RandomLevelGenerator
+MRUItem4=/Game/Models/Level_Maps/Level_5
+MRUItem5=/Game/Models/Level_Maps/Level_4
+MRUItem6=/Game/Models/Level_Maps/Level_3
+MRUItem7=/Game/Models/Level_Maps/Level_2
+MRUItem8=/Game/Models/Level_Maps/Level_1
+MRUItem9=/Game/ThirdPersonBP/Maps/Level_5
+MRUItem10=/Game/ThirdPersonBP/Maps/Level_3
+MRUItem11=/Game/ThirdPersonBP/Maps/Level_2
+MRUItem12=/Game/ThirdPersonBP/Maps/Level_6
+MRUItem13=/Game/ThirdPersonBP/Maps/Level_4
+MRUItem14=/Game/Random_Level/SpecificLevelInfo
+MRUItem15=/Game/Models/Level_Maps/Materials/blue
+MRUItem16=/Game/Models/Level_Maps/Materials/pink
+MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem18=/Game/Models/level_assets/chair
+MRUItem19=/Game/Models/level_assets/Dinning_Table
 
 [PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Game/Models/Level_Maps/Boundary.Boundary;
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Random_Level/RandomLevelGenerator.RandomLevelGenerator;
 RecentlyPlaced=/Game/Models/Level_Maps/Level_4.Level_4;
 RecentlyPlaced=/Game/Models/Level_Maps/Level_5.Level_5;
@@ -1477,6 +1710,9 @@ OnlyBuildVisibility=False
 RandomLevelGenerator_C=
 CheckForSpecificLevelInfo_2=
 CheckForSpecificLevelInfo=
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -1540,4 +1776,9 @@ bPlatformUsed[48]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+
+[DetailMultiObjectNodeExpansion]
+CryptoKeysSettings=True
+GeneralProjectSettings=True
+RecastNavMesh=True
 
