deleted jump code

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -868,6 +868,7 @@ Weapon_BFG_C.Input=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1005,18 +1006,18 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Maps/Base_Level
-MRUItem1=/Game/ThirdPersonBP/Blueprints/Charater_Assets/Weapon_BFG
-MRUItem2=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Gunplay_mixamo_com
-MRUItem3=/Game/ThirdPersonBP/Blueprints/Charater_Assets/Weapon_Stick
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Charater_Assets/BFG1
-MRUItem5=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Stable_Sword_Outward_Slash_mixamo_com
-MRUItem6=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OLd_Man_Anim
-MRUItem7=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OldMan_BS
-MRUItem8=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Old_Man_Idle
-MRUItem9=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Old_man_low
-MRUItem10=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Derrick
-MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/ThirdPersonBP/Maps/Base_Level
+MRUItem2=/Game/ThirdPersonBP/Blueprints/Charater_Assets/Weapon_BFG
+MRUItem3=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Gunplay_mixamo_com
+MRUItem4=/Game/ThirdPersonBP/Blueprints/Charater_Assets/Weapon_Stick
+MRUItem5=/Game/ThirdPersonBP/Blueprints/Charater_Assets/BFG1
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Stable_Sword_Outward_Slash_mixamo_com
+MRUItem7=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OLd_Man_Anim
+MRUItem8=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OldMan_BS
+MRUItem9=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Old_Man_Idle
+MRUItem10=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Old_man_low
+MRUItem11=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Derrick
 MRUItem12=/Game/Models/Level_Maps/Boundary
 MRUItem13=/Game/ThirdPersonBP/Maps/Level_1
 MRUItem14=/Game/Random_Level/RandomLevelGenerator
