--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,15 +115,16 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/Base_Level
-MRUItem1=/Game/ThirdPersonBP/Maps/Level_1
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem3=/Game/ThirdPersonBP/Maps/Level_5
-MRUItem4=/Game/ThirdPersonBP/Maps/Level_3
-MRUItem5=/Game/ThirdPersonBP/Maps/Level_2
-MRUItem6=/Game/ThirdPersonBP/Maps/Level_6
-MRUItem7=/Game/ThirdPersonBP/Maps/Level_4
-MRUItem8=/Game/ThirdPersonBP/Level_1
-MRUItem9=/Game/Level_1
+MRUItem1=/Game/ThirdPersonBP/Maps/StartLevel
+MRUItem2=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/ThirdPersonBP/Maps/Level_5
+MRUItem5=/Game/ThirdPersonBP/Maps/Level_3
+MRUItem6=/Game/ThirdPersonBP/Maps/Level_2
+MRUItem7=/Game/ThirdPersonBP/Maps/Level_6
+MRUItem8=/Game/ThirdPersonBP/Maps/Level_4
+MRUItem9=/Game/ThirdPersonBP/Level_1
+MRUItem10=/Game/Level_1
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens,
@@ -214,9 +215,10 @@ Chef_AI_C=PropertyWrapper.DefaultValueCategory.None,
 Chef_Anim_C=
 Death_C=PropertyWrapper.DefaultValueCategory.None,
 Ai_Hud_C=
+Stamina_Note_C=PropertyWrapper.DefaultValueCategory.None,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints/Chef_Anim
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=False
@@ -1060,16 +1062,84 @@ WidgetComponent.Tags=True
 WidgetComponent.ComponentReplication=True
 WidgetComponent.Cooking=True
 WidgetComponent.Events=True
+Stamina_Pickup_C.TransformCommon=True
+Stamina_pickup_withNote_C.TransformCommon=True
+Stamina_pickup_withNote_C.Rendering=True
+Stamina_pickup_withNote_C.Replication=True
+Stamina_pickup_withNote_C.Collision=True
+Stamina_pickup_withNote_C.Input=True
+Stamina_pickup_withNote_C.Actor=True
+Stamina_pickup_withNote_C.Tick=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Stamina_Note_C.Appearance=True
+Stamina_Note_C.Designer=True
+Stamina_Note_C.Input=True
+Stamina_Note_C.Interaction=True
+Stamina_Note_C.Performance=True
+Stamina_Note_C.Layout=True
+Stamina_Note_C.Behavior=True
+Stamina_Note_C.Render Transform=True
+Stamina_Note_C.Accessibility=True
+Stamina_Note_C.Clipping=True
+Stamina_Note_C.Navigation=True
+Stamina_Note_C.Localization=True
+StartLevel_C.Tick=True
+StartLevel_C.Replication=True
+StartLevel_C.Actor=True
+StartLevel_C.Input=True
+Base_Level_C.Tick=True
+Base_Level_C.Replication=True
+Base_Level_C.Actor=True
+Base_Level_C.Input=True
+HUD_C.Appearance=True
+HUD_C.Designer=True
+HUD_C.Input=True
+HUD_C.Interaction=True
+HUD_C.Performance=True
+HUD_C.Layout=True
+HUD_C.Behavior=True
+HUD_C.Render Transform=True
+HUD_C.Accessibility=True
+HUD_C.Clipping=True
+HUD_C.Navigation=True
+HUD_C.Localization=True
+Doris_C.Default=True
+Doris_C.Tick=True
+Doris_C.Character=True
+Doris_C.Camera=True
+Doris_C.Pawn=True
+Doris_C.Replication=True
+Doris_C.Rendering=True
+Doris_C.Collision=True
+Doris_C.Actor=True
+Doris_C.Input=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Chef_AI.Chef_AI
-OpenAssetsAtExit=/Game/Models/Pickups/Stamina_Pickup.Stamina_Pickup
+OpenAssetsAtExit=/Game/Widgets/Start.Start
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OLd_Man_Anim.OLd_Man_Anim
-OpenAssetsAtExit=/Game/Widgets/Ai_Hud.Ai_Hud
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Chef_Anim.Chef_Anim
+OpenAssetsAtExit=/Game/Widgets/HUD.HUD
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1080,6 +1150,9 @@ FbxImportUI.Material=True
 RecastNavMesh.Runtime=True
 SkeletalMeshComponent.Animation=True
 SpringArmComponent.Lag=True
+Border.Behavior=True
+Border.Appearance=True
+GameMapsSettings.DefaultMaps=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1208,28 +1281,30 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Zombie_Death_mixamo_com
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem2=/Game/Widgets/Ai_Hud
-MRUItem3=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Chef
-MRUItem4=/Game/Models/Pickups/Stamina_Pickup
-MRUItem5=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OLd_Man_Anim
-MRUItem6=/Game/Widgets/Death
-MRUItem7=/Game/ThirdPersonBP/Blueprints/Chef_AI
-MRUItem8=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Mutant_Punch_mixamo_com
-MRUItem9=/Game/ThirdPersonBP/Maps/Base_Level
-MRUItem10=/Game/ThirdPersonBP/Maps/Level_1
-MRUItem11=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Chef_Anim
-MRUItem12=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Chef_Anim_BS
-MRUItem13=/Game/Widgets/HUD
-MRUItem14=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OldMan_BS
-MRUItem15=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem16=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Chef_Material
-MRUItem17=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris
-MRUItem18=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris_material
-MRUItem19=/Game/ThirdPersonBP/Blueprints/Charater_Assets/Weapon_BFG
+MRUItem0=/Game/ThirdPersonBP/Blueprints/Doris
+MRUItem1=/Game/ThirdPersonBP/Maps/Base_Level
+MRUItem2=/Game/Widgets/HUD
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/ThirdPersonBP/Maps/StartLevel
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem6=/Game/Widgets/Start
+MRUItem7=/Game/Widgets/Stamina_Note
+MRUItem8=/Game/Models/Pickups/Stamina_pickup_withNote
+MRUItem9=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem10=/Game/Models/Pickups/Stamina_Pickup
+MRUItem11=/Game/ThirdPersonBP/Blueprints/Chef_AI
+MRUItem12=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Zombie_Death_mixamo_com
+MRUItem13=/Game/Widgets/Ai_Hud
+MRUItem14=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Chef
+MRUItem15=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OLd_Man_Anim
+MRUItem16=/Game/Widgets/Death
+MRUItem17=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Mutant_Punch_mixamo_com
+MRUItem18=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Chef_Anim
+MRUItem19=/Game/ThirdPersonBP/Blueprints/Chef_Anim/Chef_Anim_BS
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Pickups/Stamina_pickup_withNote.Stamina_pickup_withNote;
+RecentlyPlaced=/Game/Models/Pickups/Stamina_Pickup.Stamina_Pickup;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Chef_AI.Chef_AI;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Models/Level_Maps/Boundary.Boundary;
@@ -2146,24 +2221,25 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 OLd_Man_Anim_C=
 AnimInstance=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[23]\" "
-ThirdPersonCharacter_C="\"Object.Health\" \"Object.Health\" "
-Character="\"Object.Health\" \"Object.Health\" "
-Pawn="\"Object.Health\" \"Object.Health\" "
+ThirdPersonCharacter_C=
+Character=
+Pawn=
 Chef_AI_C=
 Chef_Anim_C=
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" "
-PanelWidget=
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" "
 Ai_Hud_C=
 UserWidget=
+Image="\"Object.Appearance.Brush\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bRealtimeMaterialViewport=False
@@ -2261,6 +2337,7 @@ CryptoKeysSettings=True
 GeneralProjectSettings=True
 RecastNavMesh=True
 InputSettings=True
+GameMapsSettings=True
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
