change viewport. no major changes

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,6 +93,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -116,8 +117,8 @@ CurrentScalingGridSize=4
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/Base_Level
-MRUItem1=/Game/ThirdPersonBP/Maps/StartLevel
-MRUItem2=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem1=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem2=/Game/ThirdPersonBP/Maps/StartLevel
 MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem4=/Game/ThirdPersonBP/Maps/Level_5
 MRUItem5=/Game/ThirdPersonBP/Maps/Level_3
@@ -1177,16 +1178,7 @@ Derrick_C.Input=True
 Stamina_Note_C.Default=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris_Anim.Doris_Anim
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OLd_Man_Anim.OLd_Man_Anim
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris_BS.Doris_BS
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OldMan_BS.OldMan_BS
-OpenAssetsAtExit=/Game/Widgets/HUD.HUD
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Doris.Doris
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Chef_AI.Chef_AI
-OpenAssetsAtExit=/Game/Widgets/Start.Start
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Derrick.Derrick
+CleanShutdown=False
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1329,25 +1321,25 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Maps/Base_Level
-MRUItem1=/Game/ThirdPersonBP/Maps/StartLevel
-MRUItem2=/Game/ThirdPersonBP/Blueprints/Derrick
-MRUItem3=/Game/Widgets/Start
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Chef_AI
-MRUItem5=/Game/ThirdPersonBP/Blueprints/Doris
-MRUItem6=/Game/Widgets/HUD
-MRUItem7=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OldMan_BS
-MRUItem8=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris_BS
-MRUItem9=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OLd_Man_Anim
-MRUItem10=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris_Anim
-MRUItem11=/Game/Widgets/Stamina_Note
-MRUItem12=/Game/Models/Pickups/Stamina_pickup_withNote
-MRUItem13=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Standing_Melee_Combo_Attack_Ver__1_mixamo_com
-MRUItem14=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Mma_Kick_mixamo_com
-MRUItem15=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Right_Hook_mixamo_com
-MRUItem16=/Game/ThirdPersonBP/Blueprints/Charater_Assets/Weapon_kick
-MRUItem17=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Old_man_low
-MRUItem18=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris
-MRUItem19=/Game/ThirdPersonBP/Blueprints/Charater_Assets/Weapon_FryingPan
+MRUItem1=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem2=/Game/ThirdPersonBP/Maps/StartLevel
+MRUItem3=/Game/ThirdPersonBP/Blueprints/Derrick
+MRUItem4=/Game/Widgets/Start
+MRUItem5=/Game/ThirdPersonBP/Blueprints/Chef_AI
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Doris
+MRUItem7=/Game/Widgets/HUD
+MRUItem8=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OldMan_BS
+MRUItem9=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris_BS
+MRUItem10=/Game/ThirdPersonBP/Blueprints/Derrick_anim/OLd_Man_Anim
+MRUItem11=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris_Anim
+MRUItem12=/Game/Widgets/Stamina_Note
+MRUItem13=/Game/Models/Pickups/Stamina_pickup_withNote
+MRUItem14=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Standing_Melee_Combo_Attack_Ver__1_mixamo_com
+MRUItem15=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Mma_Kick_mixamo_com
+MRUItem16=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Right_Hook_mixamo_com
+MRUItem17=/Game/ThirdPersonBP/Blueprints/Charater_Assets/Weapon_kick
+MRUItem18=/Game/ThirdPersonBP/Blueprints/Derrick_anim/Old_man_low
+MRUItem19=/Game/ThirdPersonBP/Blueprints/Doris_Anim/Doris
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
