--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -141,6 +141,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Attack1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Attack2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Special_move",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="Inspection",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Cancel",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
