--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -216,7 +216,7 @@ Chef_AI_C=
 Chef_Anim_C=
 Death_C=PropertyWrapper.DefaultValueCategory.None,
 Ai_Hud_C=
-Stamina_Note_C=PropertyWrapper.DefaultValueCategory.None,
+Stamina_Note_C=
 Doris_Anim_C=
 Doris_C=
 Start_C=
@@ -224,6 +224,7 @@ Derrick_C=PropertyWrapper.DefaultValueCategory.None,CameraComponent.PostProcess.
 PlayerController=
 Photo_1_C=
 Photo_Parent_C=PropertyWrapper.DefaultValueCategory.None,CameraComponent.PostProcess.Lens,
+Stamina_pickup_withNote_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Maps
@@ -1316,14 +1317,28 @@ Blueprint.Interfaces=True
 Blueprint.Packaging=True
 Blueprint.Thumbnail=True
 Photo_Parent_C.TransformCommon=True
+Interact_C.Appearance=True
+Interact_C.Designer=True
+Interact_C.Input=True
+Interact_C.Interaction=True
+Interact_C.Performance=True
+Interact_C.Layout=True
+Interact_C.Behavior=True
+Interact_C.Render Transform=True
+Interact_C.Accessibility=True
+Interact_C.Clipping=True
+Interact_C.Navigation=True
+Interact_C.Localization=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Models/Interact_Notes/Photo_1.Photo_1
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
 OpenAssetsAtExit=/Game/Models/Interact_Notes/Inspect_Interface.Inspect_Interface
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Derrick.Derrick
 OpenAssetsAtExit=/Game/Models/Interact_Notes/Photo_Parent.Photo_Parent
-OpenAssetsAtExit=/Game/Widgets/HUD.HUD
+OpenAssetsAtExit=/Game/Widgets/Stamina_Note.Stamina_Note
+OpenAssetsAtExit=/Game/Models/Interact_Notes/Interact.Interact
+OpenAssetsAtExit=/Game/Models/Pickups/Stamina_pickup_withNote.Stamina_pickup_withNote
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1467,21 +1482,21 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widgets/HUD
-MRUItem1=/Game/ThirdPersonBP/Maps/Base_Level
-MRUItem2=/Game/ThirdPersonBP/Maps/Level_1
-MRUItem3=/Game/Models/Interact_Notes/Photo_Parent
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Derrick
-MRUItem5=/Game/Models/Interact_Notes/Inspect_Interface
-MRUItem6=/Game/Models/Interact_Notes/Photo_1
-MRUItem7=/Game/Models/Interact_Notes/Interact_Interface
-MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem9=/Game/Models/Interact_Notes/Interact
-MRUItem10=/Game/ThirdPersonBP/Maps/StartLevel
-MRUItem11=/Game/Widgets/Start
-MRUItem12=/Game/Widgets/Character_select
-MRUItem13=/Game/Widgets/Stamina_Note
-MRUItem14=/Game/Models/Pickups/Stamina_pickup_withNote
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem1=/Game/Models/Pickups/Stamina_pickup_withNote
+MRUItem2=/Game/Models/Interact_Notes/Interact
+MRUItem3=/Game/Widgets/Stamina_Note
+MRUItem4=/Game/Widgets/HUD
+MRUItem5=/Game/ThirdPersonBP/Maps/Base_Level
+MRUItem6=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem7=/Game/Models/Interact_Notes/Photo_Parent
+MRUItem8=/Game/ThirdPersonBP/Blueprints/Derrick
+MRUItem9=/Game/Models/Interact_Notes/Inspect_Interface
+MRUItem10=/Game/Models/Interact_Notes/Photo_1
+MRUItem11=/Game/Models/Interact_Notes/Interact_Interface
+MRUItem12=/Game/ThirdPersonBP/Maps/StartLevel
+MRUItem13=/Game/Widgets/Start
+MRUItem14=/Game/Widgets/Character_select
 MRUItem15=/Game/Widgets/Start1
 MRUItem16=/Game/ThirdPersonBP/Blueprints/Chef_AI
 MRUItem17=/Game/Widgets/Ai_Hud
@@ -2432,7 +2447,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 OLd_Man_Anim_C="\"Object.Speed\" \"Object.Speed\" "
 AnimInstance="\"Object.Speed\" \"Object.Speed\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[25]\" "
@@ -2443,8 +2458,8 @@ Chef_AI_C=
 Chef_Anim_C=
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" "
 PanelWidget=
@@ -2457,15 +2472,19 @@ Doris_C=
 Stamina_Note_C="\"Object.Appearance.ColorAndOpacity\" "
 Start_C="\"Object.Appearance.ColorAndOpacity\" "
 Character_select_C="\"Object.Appearance.ColorAndOpacity\" "
-Photo_1_C=
-WidgetComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Photo_1_C="\"Object.InteractionWidget\" \"Object.InteractionWidget\" "
+WidgetComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.UserInterface.DrawSize\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Derrick_C=
 StaticMeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Photo_Parent_C=
+Stamina_pickup_withNote_C="\"Object.Player\" \"Object.Player\" "
+BoxComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SphereComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bRealtimeMaterialViewport=False
