Added random loading screen on Replay for hints and characters

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=DerrickDorisAd
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/Base_Level.Base_Level
-GameDefaultMap=/Game/ThirdPersonBP/Maps/Base_Level.Base_Level
+EditorStartupMap=/Game/ThirdPersonBP/Maps/StartLevel.StartLevel
+GameDefaultMap=/Game/ThirdPersonBP/Maps/StartLevel.StartLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
