fixed all build issues making Blueprints static and its components.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -40,9 +40,9 @@ InternationalizationPreset=English
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
-bCookMapsOnly=True
-bCompressed=True
-bSkipEditorContent=True
+bCookMapsOnly=False
+bCompressed=False
+bSkipEditorContent=False
 bSkipMovies=True
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
