--- a/Saved/Config/Windows/Game.ini
+++ b/Saved/Config/Windows/Game.ini
@@ -2,5 +2,6 @@
 bAddPacks=False
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-StagingDirectory=(Path="D:/Unreal4/Masters/Module_2/Builds/Play_Test_2")
+StagingDirectory=(Path="D:/Unreal4/Masters/Module_2/Builds/V5Build")
+BuildConfiguration=PPBC_Shipping
 
