updated texture, added sound to canteen, added ? to ralgex

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,8 +11,8 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 StagingDirectory=(Path="D:/Unreal4/Masters/Module_2/Builds")
-FullRebuild=False
-ForDistribution=False
+FullRebuild=True
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
@@ -29,7 +29,7 @@ HttpChunkInstallDataDirectory=(Path="")
 PakFileCompressionFormats=
 PakFileAdditionalCompressionOptions=
 HttpChunkInstallDataVersion=
-IncludePrerequisites=True
+IncludePrerequisites=False
 IncludeAppLocalPrerequisites=False
 bShareMaterialShaderCode=True
 bSharedMaterialNativeLibraries=True
